crates/pasta_lua/tests/snapshots/transpiler_snapshot_test__minimal_scene.snap
---
source: crates/pasta_lua/tests/transpiler_snapshot_test.rs
assertion_line: 57
expression: lua_code
---
local PASTA = require "pasta"

do
    local SCENE = PASTA.create_scene("メイン")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act.さくら:talk("「こんにちは」")
    end
end
