crates/pasta_lua/tests/snapshots/transpiler_snapshot_test__scene_with_call.snap
---
source: crates/pasta_lua/tests/transpiler_snapshot_test.rs
assertion_line: 101
expression: lua_code
---
local PASTA = require "pasta"

do
    local SCENE = PASTA.create_scene("メイン")

    function SCENE.__start__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act.さくら:talk("「サブルーチンを呼びます」")
        return act:call(SCENE.__global_name__, "サブ", {}, table.unpack(args))
    end

    function SCENE.__サブ_1__(act, ...)
        local args = { ... }
        local save, var = act:init_scene(SCENE)

        act.うにゅう:talk("「サブルーチンです」")
    end
end
